0.8.3 - 

  * added IPv6 support
  * added initial support for the win-auth-method and its protocol extensions (MySQL 5.5.17)
  * added support for extracting the pluggable auth protocol information
    - Lua-API added:
      - con.client.challenge.auth_plugin_name
      - con.client.response.auth_plugin_name
  * fixed handling capability flags in the client auth response
    - C-API change: network_mysqld_auth_response_new() needs the server-side capabilities
    - Lua-API added:
      - con.client.challenge (mirrors con.server.challenge)
      - con.client.response.server_capabilties 
      - con.server.challenge.server_capabilities 
  * fixed length of auth-plugin-data in the client auth response packet
  * fixed crash if configfile value contained invalid characters (#12951686)
    - C-API added: chassis_keyfile_to_options_with_error()
    - C-API deprected: chassis_keyfile_to_options()
  * fixed crash if --max-open-files is invalid on win32
  * handle missing trailing \0 in MySQL 5.5.7-.10 in the auth-method name

0.8.2 - 2011-08-18

  * added support for binlog checksums
  * added support for decoding _all_ datatypes of the RBR protocol
  * added support for OUT params in prepared statements in SPs with MySQL 5.5.x
  * fixed handling of SPs with cursors with MySQL 5.5.x (#61998)
  * fixed handling a "used columns" in the RBR protocol
  * fixed possible crash if run under valgrind
  * fixed crash if --defaults-file doesn't exist (#59790)
  * fixed stripping first characters of log-messages (#58941)
  * fixed mem-leak if connection-pooling is used (#56620)
  * removed bogus timestamp log if state-tracking isn't compiled in
  * removed the "admin" plugin from the list of plugins loaded by default

0.8.1 - 2010-09-13

  * remove unix-socket on shutdown
  * fixed handling of LOAD DATA LOCAL INFILE (#51864)
  * fixed mem-leak on connect for pre-4.1 clients
  * fixed initial error-packet sent to client if all backends are down (#45417)